# cpputest_simulated_gmock

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  configure.ac  cpputest_simulated_gmock.pc.in
include/gtest/: gtest.h
include/gtest/tmp/: hello.cpp
src/: GTest.cpp
tests/: TestGTest.cpp
